--- a/example.html
+++ b/example.html
@@ -23,7 +23,8 @@
 
 .HTML_text { cursor: move; }
 </style>
-
+	
+<script>
 var example;
 var other_data_related_to_dragEvent = {};
 var html_element_drag_list_metaData = [];
