--- a/index3.html
+++ b/index3.html
@@ -9,11 +9,9 @@
 
 <h1>Drag and Drop data to a bucket</h1>
 <ol type="A">
-	<li>Select a model to transcribe audio files.</li>
-	<li>Upload an audio file and view an audio file [audio display].</li>
-  	<li>Select translated transcription or transcription only.</li>
-	<li>Transcribe audio files.</li>
-	<li>Copy paste the transcribed text!</li>
+	<li>Input the GCP Storage Bucket name.</li>
+	<li>Drag and drop files into the dropArea to Submit it to Google Cloud Storage.</li>
+	<li>Submit files to Google Cloud Storage.</li>
 </ol>
   
 <br><br>
