--- a/index4.html
+++ b/index4.html
@@ -133,6 +133,8 @@ module.run_backend_process = run_backend_process;
 	
 window.addEventListener('beforeunload', function() {
 	window.location.href = window.location.href + '?nocache=' + new Date().getTime();
+
+	document.getElementById("dropdown_options").selectedIndex = 0;
 });
   
 // -----------------------------------------------  
