--- a/index4.html
+++ b/index4.html
@@ -362,8 +362,10 @@ async function List_bucket_contents() {
 	};
 
 	const out = $.ajax(url, [,settings])
-			.done(function(data) { document.getElementById('notification').innerHTML = JSON.stringify(data);
-					      return data; 
+			.done(function(data) { 
+				console.log("data: ", data);
+				// document.getElementById('notification').innerHTML = JSON.stringify(data);
+				return data; 
 			});
 
 }
