--- a/index4.html
+++ b/index4.html
@@ -315,7 +315,7 @@ async function List_bucket_contents() {
 	
 	// List contents of bucket to the output 
 
-	var url = `https://storage.googleapis.com/storage/v1/b/${document.getElementById("GCP_bucket_name").value}`
+	var url = `https://storage.googleapis.com/storage/v1/b/${document.getElementById("GCP_bucket_name").value}/o`
 
 	var headers = {"Content-Type": "application/json",
 		"Referer": url,
