--- a/index4.html
+++ b/index4.html
@@ -316,64 +316,63 @@ async function List_bucket_contents() {
 	// List contents of bucket to the output 
 
 	var url = `https://storage.googleapis.com/storage/v1/b/${document.getElementById("GCP_bucket_name").value}/o`
-
-	var headers = {"Content-Type": "application/json",
-		"Referer": url,
-		"Origin": "https://codesolutions2.github.io",
-		"Connection": "keep-alive",
-		//"Sec-Fetch-Dest": "empty",
-		//"Sec-Fetch-Mode": "cors", 
-		//"Sec-Fetch-Site": "cross-site",
-		//"Sec-Fetch-User": "?1",
-		"User-Agent": "Mozilla/5.0 (X11; Linux x86_64; rv:120.0) Gecko/20100101 Firefox/120.0",
-		"Access-Control-Allow-Origin": "*",
-		//'Access-Control-Allow-Credentials': false, 
-		//"Access-Control-Request-Method": method,
-		//"Access-Control-Request-Headers": 'content-type,x-pingother',
-		//'Cache-Control': 'max-age=0',
-	};
-
-	// var options = { 
-	// 	method : 'GET',
-	// 	mode: 'cors',
-	// 	headers: new Headers(headers),
-	// 	cache: "no-cache",
-	// 	// crossorigin: 'anonymous',
-	// 	crossorigin: '*',
-	// 	redirect: "follow"
-	// };
 	
-	// const out = await fetch(url, options)
-	// 	.then(res => res.json())
-	// 	.then(async function(data) { 
-	// 		console.log('data: ', data);
-	// 		return JSON.parse(JSON.stringify(data));
-	// 	})
-	// 	.catch(error => console.error("error: ", error));
-	
-	var settings = {
-		// url: url,
-		type : 'GET',
-		async: true,
-		crossDomain: true,
-		beforeSend: function(xhr) {xhr.withCredentials = true;},
-		// headers: new Headers(headers),
-		xhrFields: {responseType: 'json'},
-		dataType: 'json',
-		success: function(response) { console.log('Success'); },
-		error: function(xhr, status, error) { console.log('Error:', error); }
-	};
+	var out = await fetch_on_cloud_storage_return_contents_list(url)
+			.then(async function(xmlDocument) {
+				console.log('xmlDocument: ', xmlDocument);
+		
+				var HTMLCollection = xmlDocument.getElementsByTagName("Key");
+				console.log('HTMLCollection: ', HTMLCollection);
 
-	const out = $.ajax(url, [,settings])
-			.done(function(data) { 
-				console.log("data: ", data);
-				document.getElementById('notification').innerHTML = JSON.stringify(data);
-				return data; 
-			});
+				// Test global variable scope: reassign file_array
+				file_array = [];
+				for (var i=0; i<HTMLCollection.length; i++) {
+					file_array.push(HTMLCollection[i].textContent);
+				}
+				console.log('file_array: ', file_array);
+				return file_array;
+			})
 
 }
 
-// ----------------------------------------------------
+async function fetch_on_cloud_storage_return_contents_list(url) {
+
+	// Example url of a Cloud Storage folder: https://storage.googleapis.com/question-quiz-storage
+
+	var settings = {
+		type : 'GET',
+		async: true,
+		crossDomain: true,
+		beforeSend: function(xhr) { xhr.withCredentials = true; },
+		success: function(response) { console.log('Success'); },
+		error: function(xhr, status, error) { console.log('Error:', error); }
+	};
+	
+	return $.ajax(url, [,settings]).done(function(response) { return response; });
+}
+
+// -------------------------------------------------
+
+async function fetch_file_from_cloud_storage(url) {
+
+	// Example file url in Cloud Storage: https://storage.googleapis.com/question-quiz-storage/out0.txt
+	
+	var settings = {
+		type : 'GET',
+		async: true,
+		crossDomain: true,
+		xhrFields: {responseType: 'text'},
+		dataType: 'text',
+		beforeSend: function(xhr) { xhr.withCredentials = true; },
+		success: function(response) { console.log('Success'); },
+		error: function(xhr, status, error) { console.log('Error:', error); }
+	};
+	
+	return $.ajax(url, [,settings]).done(function(response) { return response; });
+	
+}
+
+// -------------------------------------------------
 	
 </script>
 </body>
