--- a/index4.html
+++ b/index4.html
@@ -317,7 +317,7 @@ async function List_bucket_contents() {
 
 	var url = `https://storage.googleapis.com/storage/v1/b/${document.getElementById("GCP_bucket_name").value}/o`
 	
-	var out = await fetch_on_cloud_storage_return_contents_list(url)
+	await fetch_on_cloud_storage_return_contents_list(url)
 			.then(async function(xmlDocument) {
 				console.log('xmlDocument: ', xmlDocument);
 				
@@ -326,7 +326,7 @@ async function List_bucket_contents() {
 					file_array.push(xmlDocument.items[i].name);
 				}
 				console.log('file_array: ', file_array);
-				return file_array;
+				document.getElementById('notification').innerHTML = file_array; 
 			})
 
 }
