--- a/index5.html
+++ b/index5.html
@@ -26,10 +26,11 @@
 <!-- ---------------------------------------- -->
 <!-- CSS -->
 <style>
-
 div { padding: 10px; display:block; font-family:courier; font-size:15px; height:300px; }
 div#notification { position: relative; color: #3236a8; }
 div#error { position: relative; color: #bd1f17; }
+
+.dropArea { height: 200px; width: 200px;	border-radius: 15px;	border: 0.25px solid black; }
 </style>
 <!-- ---------------------------------------- -->
 
