--- a/index5.html
+++ b/index5.html
@@ -326,7 +326,7 @@ async function List_bucket_contents() {
 					file_array.push(xmlDocument.items[i].name);
 					document.getElementById('notification').innerHTML = xmlDocument.items[i].name+"<br>"
 				}
-				// console.log('file_array: ', file_array);
+				console.log('file_array: ', file_array);
 			})
 
 }
