--- a/index5.html
+++ b/index5.html
@@ -307,9 +307,14 @@ async function Submit_to_cloudStorage() {
 			
 			let regexp = new RegExp(`${file_names.at(i)}`, 'g');
 			let match = file_array.join(' ').match(regexp) ?? [];
+			
 			while (match.length == 0) {
 				file_array = await List_bucket_contents(false);
 				match = file_array.join(' ').match(regexp) ?? [];
+
+				await new Promise(r => setTimeout(r, 5000));
+				
+				console.log('match: ', match);
 			}
 			document.getElementById('notification').innerHTML = `File ${file_names.at(i)} was successfully put in the bucket ${GCP_bucket_name}`; 
 		}
@@ -322,7 +327,7 @@ async function Submit_to_cloudStorage() {
 	}
 	
 }
-
+	
 // ----------------------------------------------------
 
 async function List_bucket_contents(print_contents) {
