--- a/index5.html
+++ b/index5.html
@@ -144,7 +144,7 @@ window.addEventListener('beforeunload', function() {
 	// document.getElementById("Vector_database_name").value = "";
 	// document.getElementById("Vector_database_KEY").value = "";
 
-	document.getElementById("upload_file").selectedIndex = 0;
+	document.getElementById("upload_file").value = "";
 });
   
 // -----------------------------------------------  
